# cst-case-study

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
examples/outputs/: hedge_proposals.csv  irr.csv  nav_schedule.csv
src/fund_analysis/: cashflow.py  cli.py  enums.py  hedge.py  io.py  irr.py  models.py  nav.py
tests/: conftest.py  test_hedge.py  test_io.py  test_irr.py  test_models.py  test_nav.py
