[project]
name = "fund_analysis"
version = "0.1.0"
description = "CST Case Study: Fund analysis including IRR, NAV and hedging"
authors = [{name = "Aydon Smith", email = "aydonjoe.smith@gmail.com"}]
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = []

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
