[project]
name = "fund_analysis"
version = "0.1.0"
description = "CST Case Study: Fund analysis including IRR, NAV and hedging"
authors = [{name = "Aydon Smith", email = "aydonjoe.smith@gmail.com"}]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.4",
    "pandas>=2.3.3",
    "openpyxl>=3.1.5",
    "pyxirr>=0.10.8"
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "black>=25.11.0",
    "ruff>=0.14.4",
    "mypy>=1.18.2"
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
fix = true
extend-exclude = ["data/"]

[tool.ruff.lint]
extend-select = ["B", "E", "F", "I"]

[tool.mypy]
plugins = ['pydantic.mypy']
python_version = "3.12"
strict = true
ignore_missing_imports = true

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
